deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      volumes:
        - name: html
          emptyDir: {}
        - name: docker-volume
          hostPath:
            # directory location on host
            path: /var/run/docker.sock
        - name: nginx-proxy-config
          configMap:
            name: proxy-nginx-conf
        - name: ceph
          persistentVolumeClaim:
            claimName: default-pvc
            readOnly: false
      terminationGracePeriodSeconds: 5
      containers:
        - name: django
          image: gcr.io/poised-cortex-254814/webservice-server:latest
          imagePullPolicy: "Always"
          command: ["bash"]
          args:
            [
              "-c",
              "/app/setup.sh; python /app/manage.py migrate; python /app/manage.py collectstatic --noinput; daphne config.asgi:application -b 0.0.0.0 -p 8080",
            ]
          volumeMounts:
            - name: docker-volume
              mountPath: /var/run/docker.sock
            - name: ceph
              mountPath: /volume
            - name: html
              mountPath: /var/www
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-proxy-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: html
              mountPath: /var/www
        - name: vue
          image: gcr.io/poised-cortex-254814/webservice-client:latest
          imagePullPolicy: "Always"
          command: ["sh"]
          args:
            [
              "-c",
              "cp -r /app/dist /var/www/dist; while true; do sleep 10; done",
            ]
          volumeMounts:
            - name: html
              mountPath: /var/www
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
  labels:
    app: server
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"443" :"backend-config","80" :"backend-config"}}'
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: server
  type: NodePort
---
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  name: "server-ingress"
  annotations:
    kubernetes.io/ingress.global-static-ip-name: server-address
    networking.gke.io/managed-certificates: server-certificate
spec:
  backend:
    serviceName: "server-service"
    servicePort: 80
